# LuaJIT-cmake

./: .gitignore  CMakeLists.txt
cmake/: BuildHostTools.cmake
src/host/: buildvm_lib.c
